@@ -3,5 +3,13 @@ Samu:
         get_ticker():
             Added possibility to display html for jupyter notebooks with relevant info, possibility to display raw request response,
             or display float value of ticker.
-            
+
+
+
         
+Mic:
+    account:
+        get_wallet_balance():
+            Added possibiity to display pie chart of wallet balance for jupyter notebooks, possibiity to display raw request response
+            or display a formatted more readable response. 
+            Added documentation: now you can see that accountType is a required parameter. 
